Add security (JWT) and RecipeController.

--- a/Homework1/CookingRecipes/src/main/resources/application.properties
+++ b/Homework1/CookingRecipes/src/main/resources/application.properties
@@ -2,4 +2,7 @@ server.port=8080
 
 spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
-spring.data.mongodb.database=cooking_recipes
+spring.data.mongodb.database=cooking
+
+#JWT
+jwt.secret=mysecret
