--- a/Homework1/CookingRecipes/build.gradle
+++ b/Homework1/CookingRecipes/build.gradle
@@ -35,9 +35,12 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation:2.3.5.RELEASE'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'io.jsonwebtoken:jjwt:0.9.1'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.2'
+	implementation 'jakarta.xml.bind:jakarta.xml.bind-api:2.3.2'
 }
 
 test {
